<?xml version="1.0"?>
<package format="2">
  <name>torrent_search</name>
  <version>0.0.1</version>
  <description>The torrent_search package</description>

  <maintainer email="renato@gmail.com">renato</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
